# tg_wheel_of_fortune

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  app.py  config.py  constants.py  logging_config.py  pyproject.toml  schemas.py  storage.py  utils.py
api/services/: store_api.py  telegram.py
api/static/: index.html
bot/: .dockerignore  .env.example  Dockerfile  README.md  app.py  config.py  logging_config.py  pyproject.toml
