[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.1",
  "filelock>=3.18.0",
  "httpx>=0.28.1",
  "init-data-py>=0.2.6",
  "pydantic-settings>=2.10.1",
  "rich>=14.1.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "ASYNC",  # flake8-async
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "FIX",  # flake8-fixme
    "N",  # pep8-naming
    "UP",  # pyupgrade
]
